implement the google sing in and fb sign in

--- a/langs/en.json
+++ b/langs/en.json
@@ -34,7 +34,7 @@
   "password_required": "Password is required",
   "invalid_password_format": "Password should have minimum 8 chars with uppercase,lowercase,number & special chars",
   "don't_have_an_account": "Don't have an account?",
-  "sign_up": "Signup"
-
-
+  "sign_up": "Signup",
+  "ok": "Ok",
+  "error": "Error"
 }
