implement the design of the edit and update the profile

--- a/langs/en.json
+++ b/langs/en.json
@@ -47,5 +47,6 @@
   "attend" : "Attend",
   "phone_number_required" : "Phone number required",
   "discard" : "Discard",
-  "save_changes" : "Save changes"
+  "save_changes" : "Save changes",
+  "profile_updated_successfully" : "Profile Updated Successfully"
 }
