complete the create group functionality

--- a/langs/en.json
+++ b/langs/en.json
@@ -37,60 +37,68 @@
   "sign_up": "Signup",
   "ok": "Ok",
   "error": "Error",
-
-  "invite_friends" : "Invite friends",
-  "history" : "History",
-  "about" : "About",
-  "logout" : "Log Out",
-  "my_account" : "My account",
-  "organized_events" : "Organized events",
-  "attend" : "Attend",
-  "phone_number_required" : "Phone number required",
-  "discard" : "Discard",
-  "save_changes" : "Save changes",
-  "profile_updated_successfully" : "Profile Updated Successfully",
-  "terms_and_conditions" : "Terms & Conditions",
-  "privacy_policy" : "Privacy Policy",
-  "application_version" : "Application Version",
-  "calender_settings" : "Calendar settings",
-  "delete_user" : "Delete user",
-  "invite" : "Invite",
-  "invalid_phone_number" : "Invalid Phone Number",
-  "contacts" : "Contacts",
-  "all" : "All",
-  "groups" : "Groups",
-  "rejected_invites" : "Rejected invites",
-  "search_for_contact" : "Search for contacts/profiles",
-  "create_group_of_contacts" : "Create a group of contacts",
-  "call" : "Call",
-  "sms" : "Sms",
-  "whats_app" : "WhatsApp",
-  "search_for_profile" : "Search for profile",
-  "search" : "Search",
-  "profiles_found" : "Profiles found",
-  "group_name" : "Group Name",
-  "description" : "Description",
-  "group_name_required" : "Group name is required",
-  "manage_group_contacts" : "Manage Group Contacts",
-  "group_contacts" : "Group Contacts",
-  "loading_contacts" : "Loading Contacts....",
-  "sorry_no_contacts_found" : "Sorry no contacts found",
-  "loading_rejected_contacts" : "Loading Rejected Invites....",
-  "no__rejected_contacts_found" : "No rejected invites found",
-  "searching_profiles" : "Searching profiles",
-  "no_profile_found" : "No profile found",
-  "invitations" : "Invitations",
-  "click_to_reply_to_invitation" : "Click to reply to invitation",
-  "reject_invite" : "Reject invite",
-  "accept_invite" : "Accept invite",
-  "search_field_name" : "Cooper",
-  "sorry_no_profile_found" : "Sorry no profile found",
-  "loading_groups" : "Loading Groups",
-  "sorry_no_group_found" : "Sorry no group found",
-  "click_+_to_send_invitation" : "Click + to send invitation",
-  "invitation_waiting_reply" : "Invitation Waiting reply",
-  "already_a_contact" : "Already a contact",
-  "members" : "members",
-  "contacts_in_group" : "Contacts in group",
-  "please_add_members_in_your_group" : "No member found, Please add members"
+  "invite_friends": "Invite friends",
+  "history": "History",
+  "about": "About",
+  "logout": "Log Out",
+  "my_account": "My account",
+  "organized_events": "Organized events",
+  "attend": "Attend",
+  "phone_number_required": "Phone number required",
+  "discard": "Discard",
+  "save_changes": "Save changes",
+  "profile_updated_successfully": "Profile Updated Successfully",
+  "terms_and_conditions": "Terms & Conditions",
+  "privacy_policy": "Privacy Policy",
+  "application_version": "Application Version",
+  "calender_settings": "Calendar settings",
+  "delete_user": "Delete user",
+  "invite": "Invite",
+  "invalid_phone_number": "Invalid Phone Number",
+  "contacts": "Contacts",
+  "all": "All",
+  "groups": "Groups",
+  "rejected_invites": "Rejected invites",
+  "search_for_contact": "Search for contacts/profiles",
+  "create_group_of_contacts": "Create a group of contacts",
+  "call": "Call",
+  "sms": "Sms",
+  "whats_app": "WhatsApp",
+  "search_for_profile": "Search for profile",
+  "search": "Search",
+  "profiles_found": "Profiles found",
+  "group_name": "Group Name",
+  "description": "Description",
+  "group_name_required": "Group name is required",
+  "manage_group_contacts": "Manage Group Contacts",
+  "group_contacts": "Group Contacts",
+  "loading_contacts": "Loading Contacts....",
+  "sorry_no_contacts_found": "Sorry no contacts found",
+  "loading_rejected_contacts": "Loading Rejected Invites....",
+  "no__rejected_contacts_found": "No rejected invites found",
+  "searching_profiles": "Searching profiles",
+  "no_profile_found": "No profile found",
+  "invitations": "Invitations",
+  "click_to_reply_to_invitation": "Click to reply to invitation",
+  "reject_invite": "Reject invite",
+  "accept_invite": "Accept invite",
+  "search_field_name": "Cooper",
+  "sorry_no_profile_found": "Sorry no profile found",
+  "loading_groups": "Loading Groups",
+  "sorry_no_group_found": "Sorry no group found",
+  "click_+_to_send_invitation": "Click + to send invitation",
+  "invitation_waiting_reply": "Invitation Waiting reply",
+  "already_a_contact": "Already a contact",
+  "members": "members",
+  "contacts_in_group": "Contacts in group",
+  "please_add_members_in_your_group": "No member found, Please add members",
+  "create_event": "Create event",
+  "private_in_person_event": "Private in person event",
+  "get_together": "Get together will people at a specific location.",
+  "select_image": "Select Image",
+  "event_name": "Event name",
+  "event_name_required": "Event name required",
+  "take_a_photo": "Take a photo",
+  "choose_photo": "Choose Photo",
+  "default_photo": "Default Photo"
 }
