--- a/langs/en.json
+++ b/langs/en.json
@@ -133,5 +133,7 @@
   "remove_attendant" : "Remove attendant",
   "remove_attendant_text" : "Removing someone from this list will stop them from viewing the event!",
   "remove" : "Remove",
-  "invite_more_friends": "Invite More Friends"
+  "invite_more_friends": "Invite More Friends",
+  "sure_to_delete_user" : "Are you sure you want to delete user?",
+  "sure_to_cancel_event" : "Are you sure you want to cancel event?"
 }
