--- a/langs/en.json
+++ b/langs/en.json
@@ -171,5 +171,7 @@
   "choose_date" : "Choose date",
   "start_time" : "Start time",
   "end_time" : "End time",
-  "add_date_to_event" : "Add date to event"
+  "add_date_to_event" : "Add date to event",
+  "select_final_date" : "Select final date",
+  "select_that_date" : "Select that date"
    }
