created multi date list view and final date alert

--- a/langs/en.json
+++ b/langs/en.json
@@ -168,7 +168,8 @@
   "date_options" : "Date Options",
   "options" : "Options",
   "choose_date_time" : "Choose Date Time",
-  "choose_date" : "Choose date",
+  "choose_start_date" : "Choose start date",
+  "choose_end_date" : "Choose end date",
   "start_time" : "Start time",
   "end_time" : "End time",
   "add_date_to_event" : "Add date to event",
