working on multi date attend ui on event detail screen

--- a/langs/en.json
+++ b/langs/en.json
@@ -168,7 +168,7 @@
   "date_options" : "Date Options",
   "options" : "Options",
   "choose_date_time" : "Choose Date Time",
-  "choose_start_date" : "Choose start date",
+  "choose_date" : "Choose date",
   "choose_end_date" : "Choose end date",
   "start_time" : "Start time",
   "end_time" : "End time",
