--- a/langs/en.json
+++ b/langs/en.json
@@ -168,12 +168,13 @@
   "date_options" : "Date Options",
   "options" : "Options",
   "choose_date_time" : "Choose Date Time",
-  "choose_date" : "Choose date",
+  "choose_start_date" : "Choose start date",
   "choose_end_date" : "Choose end date",
   "start_time" : "Start time",
   "end_time" : "End time",
   "add_date_to_event" : "Add date to event",
   "select_final_date" : "Select final date",
   "select_that_date" : "Select that date",
-  "which_days_could_you_attend" : "Which days could you attend ?"
+  "which_days_could_you_attend" : "Which days could you attend ?",
+  "add_end_date_time" : "add end date and time"
    }
