--- a/langs/en.json
+++ b/langs/en.json
@@ -177,5 +177,6 @@
   "select_that_date" : "Select that date",
   "which_days_could_you_attend" : "Which days could you attend ?",
   "add_end_date_time" : "add end date and time",
-  "multi_date_select_which_work" : "Multiple Dates, select which work"
+  "multi_date_select_which_work" : "Multiple Dates, select which work",
+  "available" : "available"
    }
