working on event discussion ui

--- a/langs/en.json
+++ b/langs/en.json
@@ -180,5 +180,6 @@
   "multi_date_select_which_work" : "Multiple Dates, select which work",
   "available" : "available",
   "could_not_open_map" : "Sorry, Could not open the map.",
-  "search_contact_book" : "Search contact book"
+  "search_contact_book" : "Search contact book",
+  "chats" : "Chats"
    }
