working on event and contact discussion

--- a/langs/en.json
+++ b/langs/en.json
@@ -184,5 +184,6 @@
   "chats" : "Chats",
   "leave_discussion" : "Leave Discussion",
   "sure_to_leave_discussion" : "Are you sure to leave Discussion ?",
-  "leave" : "leave"
+  "leave" : "leave",
+  "you" : "You"
    }
