--- a/langs/en.json
+++ b/langs/en.json
@@ -186,5 +186,7 @@
   "sure_to_leave_discussion" : "Are you sure to leave Discussion ?",
   "leave" : "leave",
   "you" : "You",
-  "loading_chats" : "Loading Chats...."
+  "loading_chats" : "Loading Chats....",
+  "no_image_selected" : "No image selected.",
+  "sending_image" : "Sending image....."
    }
