working on contact and group chat

--- a/langs/en.json
+++ b/langs/en.json
@@ -183,7 +183,7 @@
   "search_contact_book" : "Search contact book",
   "chats" : "Chats",
   "leave_discussion" : "Leave Discussion",
-  "sure_to_leave_discussion" : "Are you sure to leave Discussion ?",
+  "sure_to_leave_discussion" : "Are you sure you want to leave Discussion ?",
   "leave" : "leave",
   "you" : "You",
   "loading_chats" : "Loading Chats....",
