--- a/langs/en.json
+++ b/langs/en.json
@@ -206,5 +206,8 @@
   "notification_settings" : "Notification Settings",
   "receive_event_notification" : "Receive notification for events",
   "receive_contact_notification" : "Receive notification for contact invitations",
-  "receive_message_notification" : "Receive notification for messages"
+  "receive_message_notification" : "Receive notification for messages",
+  "update_discussion" : "Update Discussion",
+  "un_invite_users" : "UnInvite all user",
+  "un_invite_all_users" : " UnInvite all user will result in deleting discussion"
 }
