--- a/langs/en.json
+++ b/langs/en.json
@@ -209,5 +209,7 @@
   "receive_message_notification" : "Receive notification for messages",
   "update_discussion" : "Update Discussion",
   "un_invite_users" : "UnInvite all user",
-  "un_invite_all_users" : " UnInvite all user will result in deleting discussion"
+  "un_invite_all_users" : " UnInvite all user will result in deleting discussion",
+  "fetching_contact" : "Fetching Contact",
+  "sorry_notification_data_changed" : "Sorry Notification data changed....."
 }
