--- a/langs/en.json
+++ b/langs/en.json
@@ -215,5 +215,6 @@
   "notifications" : "Notifications",
   "loading_notifications" : "Loading notifications....",
   "no_notifications" : "No notifications for now",
-  "exception" : "Exception"
+  "exception" : "Exception",
+  "today" : "Today"
 }
