--- a/langs/en.json
+++ b/langs/en.json
@@ -242,5 +242,6 @@
   "all_data_delete" : "confirm all the data linked to your account will be deleted",
   "delete_data" : "Delete Data",
   "check_attendance" : "Check attendance",
-  "click_here_to_edit" : "You have not filled in profile, click here to edit"
+  "click_here_to_edit" : "You have not filled in profile, click here to edit",
+  "past" : "Past"
 }
