--- a/langs/en.json
+++ b/langs/en.json
@@ -243,5 +243,6 @@
   "delete_data" : "Delete Data",
   "check_attendance" : "Check attendance",
   "click_here_to_edit" : "You have not filled in profile, click here to edit",
-  "past" : "Past"
+  "past" : "Past",
+  "hide" : "Hide"
 }
