--- a/langs/en.json
+++ b/langs/en.json
@@ -249,6 +249,7 @@
   "add_a_photo_gallery" : "Add a photo gallery",
   "fetching_gallery" : "Fetching gallery.....",
   "delete_photo" : "Delete Photo",
-  "sure_to_delete_photo" : "Are you sure you want to delete photo?"
+  "sure_to_delete_photo" : "Are you sure you want to delete photo?",
+  "image_saved" : "Image Saved Successfully."
 
 }
