--- a/langs/en.json
+++ b/langs/en.json
@@ -274,5 +274,9 @@
   "mmy_contacts" : "MMY Contacts",
   "event_link" : "Event Link:",
   "copy_to_clipboard" : "Copy to clipboard",
-  "whatsapp_not_installed" : "Whatsapp not installed"
+  "whatsapp_not_installed" : "Whatsapp not installed",
+  "sample_photos" : "Sample Photos",
+  "not_specified" : "Not Specified",
+  "check_availabilities" : "Check availabilities",
+  "submitted" : "Submitted"
 }
