working on meet - 114

--- a/langs/en.json
+++ b/langs/en.json
@@ -279,5 +279,9 @@
   "not_specified" : "Not Specified",
   "check_availabilities" : "Check availabilities",
   "submitted" : "Submitted",
-  "select_date_first" : "Please select date first."
+  "select_date_first" : "Please select date first.",
+  "error_in_getting_answer_form" : "Error in getting Event answer form",
+  "View_replies_to_form" : "View replies to form",
+  "getting_replies" : "Getting replies....",
+  "no_replies_received_yet" : "No replies received yet."
 }
