--- a/langs/en.json
+++ b/langs/en.json
@@ -287,7 +287,7 @@
   "answers" : "Answers",
   "error_in_sending_email_answers" : "Error in sending email answers",
   "allow_non_attending_and_invited" : "Allow Non-Attending and Invited",
-  "allow_user_to_see_non_attending_and_invited" : "Allow user to see Non-Attending and Invited",
+  "allow_user_to_see_non_attending_and_invited" : "Allow users to see Non-Attending and Invited",
   "check_event_responses" : "Check event responses",
   "not_attending" : "Not attending",
   "invited" : "Invited",
